Refactor for efficiency

--- a/brewing.html
+++ b/brewing.html
@@ -109,15 +109,13 @@
 
         <!-- Main section -->
 
-        <main class="portfolio container-fluid">
+        <main class="container-fluid">
             <div class="row">
                 <article
                     class="main-container portfolio-container col-md-7 offset-1"
                 >
                     <header class="main-header">
-                        <h1>
-                            I Made Beer!
-                        </h1>
+                        <h1>I Made Beer!</h1>
                     </header>
                     <div class="row">
                         <section class="portfolio-body col-md-12">
@@ -230,7 +228,7 @@
             </div>
         </main>
 
-        <!-- Beginning of Footer -->
+        <!-- Footer and Copyright-->
 
         <footer class="footer mt-auto fixed-bottom">
             <div class="container-fluid">
