--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
 
         <!-- Main section -->
 
-        <main class="index container-fluid">
+        <main class="container-fluid">
             <form>
                 <div class="row">
                     <div class="main-container col-md-7 offset-1">
@@ -165,7 +165,7 @@
             </form>
         </main>
 
-        <!-- Beginning of Footer -->
+        <!-- Footer and Copyright-->
 
         <footer class="footer mt-auto fixed-bottom">
             <div class="container-fluid">
