--- a/index.html
+++ b/index.html
@@ -115,17 +115,15 @@
 
         <!-- Main section -->
 
-        <main class="index container-fluid">
+        <main class="container-fluid">
             <div class="row">
                 <article class="main-container col-md-7 offset-1">
                     <header class="main-header">
-                        <h1>
-                            About me
-                        </h1>
+                        <h1>About me</h1>
                     </header>
                     <section class="main-body">
                         <img
-                            class="img-thumbnail float-left headshot"
+                            class="img-thumbnail float-left headshot img-fluid"
                             src="assets/headshot.png"
                             alt="Mark's headshot"
                         />
@@ -144,6 +142,8 @@
                                 >EdConenctive</a
                             >.
                         </p>
+
+        <!-- Social Media Links -->
                         <div class="social">
                             <div class="col-md-12">
                                 <ul class="social-links">
@@ -208,9 +208,36 @@
                     </section>
                 </article>
             </div>
+
+            <!-- Tech Stack -->
+            <div class="row">
+                <article class="stack-container col-md-7 offset-1">
+                    <header class="main-header">
+                        <h1>Currently Learning:</h1>
+                    </header>
+                    <section class="stack-body">
+                        <div class="stack-icons">
+                            <img src="Assets/html-icon.png" alt="HTML5" />
+                            <img src="Assets/css-icon.png" alt="CSS" />
+                            <img src="Assets/js-icon.png" alt="JavaScript" />
+                            <img
+                                src="Assets/bootstrap-icon.png"
+                                alt="Bootstrap"
+                            />
+                            <img src="Assets/react-icon.png" alt="React" />
+                            <img src="Assets/mongo-icon.png" alt="MongoDB" />
+                            <img src="Assets/node-icon.png" alt="Node" />
+                            <img
+                                src="Assets/expressjs-icon.png"
+                                alt="Express"
+                            />
+                        </div>
+                    </section>
+                </article>
+            </div>
         </main>
 
-        <!-- Beginning of Footer -->
+        <!-- Footer and Copyright-->
 
         <footer class="footer mt-auto fixed-bottom">
             <div class="container-fluid">
