--- a/portfolio.html
+++ b/portfolio.html
@@ -112,15 +112,11 @@
 
         <!-- Portfolio -->
 
-        <main class="portfolio container-fluid">
+        <main class="container-fluid">
             <div class="row">
-                <article
-                    class="main-container portfolio-container col-md-7 offset-1"
-                >
+                <article class="main-container col-md-7 offset-1">
                     <header class="main-header">
-                        <h1>
-                            My Portfolio
-                        </h1>
+                        <h1>My Portfolio</h1>
                     </header>
                     <div class="row">
                         <section class="portfolio-body col-md-12">
@@ -234,7 +230,7 @@
             </div>
         </main>
 
-        <!-- Beginning of Footer -->
+        <!-- Footer and Copyright-->
         <footer class="footer mt-auto fixed-bottom">
             <div class="container-fluid">
                 <div class="row">
