Fixed tech stack images

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             >.
                         </p>
 
-        <!-- Social Media Links -->
+                        <!-- Social Media Links -->
                         <div class="social">
                             <div class="col-md-12">
                                 <ul class="social-links">
@@ -217,18 +217,18 @@
                     </header>
                     <section class="stack-body">
                         <div class="stack-icons">
-                            <img src="Assets/html-icon.png" alt="HTML5" />
-                            <img src="Assets/css-icon.png" alt="CSS" />
-                            <img src="Assets/js-icon.png" alt="JavaScript" />
+                            <img src="assets/html-icon.png" alt="HTML5" />
+                            <img src="assets/css-icon.png" alt="CSS" />
+                            <img src="assets/js-icon.png" alt="JavaScript" />
                             <img
-                                src="Assets/bootstrap-icon.png"
+                                src="assets/bootstrap-icon.png"
                                 alt="Bootstrap"
                             />
-                            <img src="Assets/react-icon.png" alt="React" />
-                            <img src="Assets/mongo-icon.png" alt="MongoDB" />
-                            <img src="Assets/node-icon.png" alt="Node" />
+                            <img src="assets/react-icon.png" alt="React" />
+                            <img src="assets/mongo-icon.png" alt="MongoDB" />
+                            <img src="assets/node-icon.png" alt="Node" />
                             <img
-                                src="Assets/expressjs-icon.png"
+                                src="/assets/expressjs-icon.png"
                                 alt="Express"
                             />
                         </div>
