--- a/index.html
+++ b/index.html
@@ -118,34 +118,40 @@
         <main class="container-fluid">
             <div class="row">
                 <article class="main-container col-md-7 offset-1">
-                    <header class="main-header">
-                        <h1>About me</h1>
-                    </header>
-                    <section class="main-body">
-                        <img
-                            class="img-thumbnail float-left headshot img-fluid"
-                            src="assets/headshot.png"
-                            alt="Mark's headshot"
-                        />
-                        <h3 class="main-title">
-                            Full-stack developer. Brewer. Killer haircut.
-                        </h3>
-                        <p class="main-text">
-                            I'm Mark Cross and I'm enrolled in the University of
-                            Richmond Coding Bootcamp. Born and raised in
-                            Annapolis, MD, graduate of the Univertsity of
-                            Delaware (go Blue Hens 🐓), and now Richmond local.
-                            I've spent my career in sales and sales leadership,
-                            having recently served as the head of sales for
-                            Richmond-based startup,
-                            <a href="https://www.edconnective.com/"
-                                >EdConenctive</a
-                            >.
-                        </p>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <header class="main-header">
+                                <h1>About me</h1>
+                            </header>
 
-                        <!-- Social Media Links -->
-                        <div class="social">
-                            <div class="col-md-12">
+                            <section class="main-body">
+                                <img
+                                    class="img-thumbnail float-left headshot img-fluid"
+                                    src="assets/headshot.png"
+                                    alt="Mark's headshot"
+                                />
+                                <h3 class="main-title">
+                                    Full-stack developer. Brewer. Killer
+                                    haircut.
+                                </h3>
+                                <p class="main-text">
+                                    I'm Mark Cross and I'm enrolled in the
+                                    University of Richmond Coding Bootcamp. Born
+                                    and raised in Annapolis, MD, graduate of the
+                                    Univertsity of Delaware (go Blue Hens 🐓),
+                                    and now Richmond local. I've spent my career
+                                    in sales and sales leadership, having
+                                    recently served as the head of sales for
+                                    Richmond-based startup,
+                                    <a href="https://www.edconnective.com/"
+                                        >EdConenctive</a
+                                    >.
+                                </p>
+                            </section>
+
+                            <!-- Social Media Links -->
+
+                            <section class="social">
                                 <ul class="social-links">
                                     <li>
                                         <a
@@ -203,40 +209,54 @@
                                         /></a>
                                     </li>
                                 </ul>
-                            </div>
+                            </section>
                         </div>
-                    </section>
-                </article>
-            </div>
+                    </div>
 
-            <!-- Tech Stack -->
-            <div class="row">
-                <article class="stack-container col-md-7 offset-1">
-                    <header class="main-header">
-                        <h1>Currently Learning:</h1>
-                    </header>
-                    <section class="stack-body">
-                        <div class="stack-icons">
-                            <img src="assets/html-icon.png" alt="HTML5" />
-                            <img src="assets/css-icon.png" alt="CSS" />
-                            <img src="assets/js-icon.png" alt="JavaScript" />
-                            <img
-                                src="assets/bootstrap-icon.png"
-                                alt="Bootstrap"
-                            />
-                            <img src="assets/react-icon.png" alt="React" />
-                            <img src="assets/mongo-icon.png" alt="MongoDB" />
-                            <img src="assets/node-icon.png" alt="Node" />
-                            <img
-                                src="/assets/expressjs-icon.png"
-                                alt="Express"
-                            />
+                    <!-- Tech Stack -->
+                    <div class="row">
+                        <div class="col-md-12">
+                            <header class="stack-header">
+                                <h1>Currently Learning:</h1>
+                            </header>
+                            <section class="stack-body">
+                                <div class="stack-icons">
+                                    <img
+                                        src="assets/html-icon.png"
+                                        alt="HTML5"
+                                    />
+                                    <img src="assets/css-icon.png" alt="CSS" />
+                                    <img
+                                        src="assets/js-icon.png"
+                                        alt="JavaScript"
+                                    />
+                                    <img
+                                        src="assets/bootstrap-icon.png"
+                                        alt="Bootstrap"
+                                    />
+                                    <img
+                                        src="assets/react-icon.png"
+                                        alt="React"
+                                    />
+                                    <img
+                                        src="assets/mongo-icon.png"
+                                        alt="MongoDB"
+                                    />
+                                    <img
+                                        src="assets/node-icon.png"
+                                        alt="Node"
+                                    />
+                                    <img
+                                        src="assets/expressjs-icon.png"
+                                        alt="Express"
+                                    />
+                                </div>
+                            </section>
                         </div>
-                    </section>
+                    </div>
                 </article>
             </div>
         </main>
-
         <!-- Footer and Copyright-->
 
         <footer class="footer mt-auto fixed-bottom">
