Updated portfolio and nav bar

--- a/brewing.html
+++ b/brewing.html
@@ -78,7 +78,7 @@
                                     >An Hour Out Placeholder</a
                                 >
                                 <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
+                                    >Total Wine Placeholder</a
                                 >
                                 <a class="dropdown-item" href="#"
                                     >Project Placeholder</a
