--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
                                     >An Hour Out Placeholder</a
                                 >
                                 <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
+                                    >Total Wine Placeholder</a
                                 >
                                 <a class="dropdown-item" href="#"
                                     >Project Placeholder</a
@@ -144,11 +144,12 @@
                                         alt="..."
                                     />
                                     <figcaption class="card-body">
-                                        <h4 class="card-title">Card title</h4>
+                                        <h4 class="card-title">Total Wine</h4>
                                         <p class="card-text">
-                                            This card has supporting text below
-                                            as a natural lead-in to additional
-                                            content.
+                                            A place for Wine Team members to
+                                            track their Wine for Life progress,
+                                            including ratings, comments,
+                                            pairings, and more.
                                         </p>
                                     </figcaption>
                                 </figure>
