--- a/brewing.html
+++ b/brewing.html
@@ -81,16 +81,7 @@
                                     >Total Wine Placeholder</a
                                 >
                                 <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
+                                    >Travel Log</a
                                 >
                             </div>
                         </li>
