--- a/portfolio.html
+++ b/portfolio.html
@@ -83,18 +83,7 @@
                                 <a class="dropdown-item" href="#"
                                     >Total Wine Placeholder</a
                                 >
-                                <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
-                                >
+                                <a class="dropdown-item" href="#">Travel Log</a>
                             </div>
                         </li>
                         <li class="nav-item">
@@ -125,7 +114,7 @@
                                     <img
                                         src="https://via.placeholder.com/300"
                                         class="img-fluid"
-                                        alt="..."
+                                        alt="An Hour Out"
                                     />
                                     <figcaption class="card-body">
                                         <h4 class="card-title">An Hour Out</h4>
@@ -141,7 +130,7 @@
                                     <img
                                         src="https://via.placeholder.com/300"
                                         class="img-fluid"
-                                        alt="..."
+                                        alt="Total Wine"
                                     />
                                     <figcaption class="card-body">
                                         <h4 class="card-title">Total Wine</h4>
@@ -157,16 +146,14 @@
                                     <img
                                         src="https://via.placeholder.com/300"
                                         class="img-fluid"
-                                        alt="..."
+                                        alt="Travel Log"
                                     />
                                     <figcaption class="card-body">
-                                        <h4 class="card-title">Card title</h4>
+                                        <h4 class="card-title">Travel Log</h4>
                                         <p class="card-text">
-                                            This is a wider card with supporting
-                                            text below as a natural lead-in to
-                                            additional content. This card has
-                                            even longer content than the first
-                                            to show that equal height action.
+                                            A place to log all of your travels
+                                            and adventures. Perfect for note
+                                            taking for a travel blog!
                                         </p>
                                     </figcaption>
                                 </figure>
