--- a/contact.html
+++ b/contact.html
@@ -80,18 +80,7 @@
                                 <a class="dropdown-item" href="#"
                                     >Total Wine Placeholder</a
                                 >
-                                <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
-                                >
+                                <a class="dropdown-item" href="#">Travel Log</a>
                             </div>
                         </li>
                         <li class="nav-item">
