--- a/index.html
+++ b/index.html
@@ -87,16 +87,7 @@
                                     >Total Wine Placeholder</a
                                 >
                                 <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                    >Project Placeholder</a
+                                    >Travel Log</a
                                 >
                             </div>
                         </li>
