--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
                                 <a class="dropdown-item" href="#"
                                     >Total Wine Placeholder</a
                                 >
-                                <a class="dropdown-item" href="#"
-                                    >Travel Log</a
-                                >
+                                <a class="dropdown-item" href="#">Travel Log</a>
                             </div>
                         </li>
                         <li class="nav-item">
@@ -114,7 +112,10 @@
                             <header class="main-header">
                                 <h1>About me</h1>
                             </header>
-
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
                             <section class="main-body">
                                 <img
                                     class="img-thumbnail float-left headshot img-fluid"
@@ -139,9 +140,11 @@
                                     >.
                                 </p>
                             </section>
-
-                            <!-- Social Media Links -->
-
+                        </div>
+                    </div>
+                    <!-- Social Media Links -->
+                    <div class="row">
+                        <div class="column-md-12">
                             <section class="social">
                                 <ul class="social-links">
                                     <li>
@@ -152,17 +155,6 @@
                                             <img
                                                 src="assets/facebook.png"
                                                 alt="Facebook"
-                                                class="social-img"
-                                        /></a>
-                                    </li>
-                                    <li>
-                                        <a
-                                            href="https://twitter.com/Crossbacca"
-                                            target="_blank"
-                                        >
-                                            <img
-                                                src="assets/twitter.png"
-                                                alt="Twitter"
                                                 class="social-img"
                                         /></a>
                                     </li>
@@ -210,8 +202,10 @@
                             <header class="stack-header">
                                 <h1>Currently Learning:</h1>
                             </header>
-                            <section class="stack-body">
-                                <div class="stack-icons">
+                            <div class="row">
+                                <section
+                                    class="md-col-12 stack-body stack-icons"
+                                >
                                     <img
                                         src="assets/html-icon.png"
                                         alt="HTML5"
@@ -241,8 +235,8 @@
                                         src="assets/expressjs-icon.png"
                                         alt="Express"
                                     />
-                                </div>
-                            </section>
+                                </section>
+                            </div>
                         </div>
                     </div>
                 </article>
