--- a/brewing.html
+++ b/brewing.html
@@ -77,10 +77,10 @@
                                 <a class="dropdown-item" href="portfolio.html"
                                     >An Hour Out Placeholder</a
                                 >
-                                <a class="dropdown-item" href="#"
+                                <a class="dropdown-item" href="portfolio.html"
                                     >Total Wine Placeholder</a
                                 >
-                                <a class="dropdown-item" href="#"
+                                <a class="dropdown-item" href="portfolio.html"
                                     >Travel Log</a
                                 >
                             </div>
