--- a/index.html
+++ b/index.html
@@ -83,10 +83,12 @@
                                 <a class="dropdown-item" href="portfolio.html"
                                     >An Hour Out Placeholder</a
                                 >
-                                <a class="dropdown-item" href="#"
+                                <a class="dropdown-item" href="portfolio.html"
                                     >Total Wine Placeholder</a
                                 >
-                                <a class="dropdown-item" href="#">Travel Log</a>
+                                <a class="dropdown-item" href="portfolio.html"
+                                    >Travel Log</a
+                                >
                             </div>
                         </li>
                         <li class="nav-item">
