Fixed missing row in Headers

--- a/brewing.html
+++ b/brewing.html
@@ -105,9 +105,11 @@
                 <article
                     class="main-container portfolio-container col-md-7 offset-1"
                 >
-                    <header class="main-header">
-                        <h1>I Made Beer!</h1>
-                    </header>
+                    <div class="row">
+                        <header class="main-header col-md-12">
+                            <h1>I Made Beer!</h1>
+                        </header>
+                    </div>
                     <div class="row">
                         <section class="portfolio-body col-md-12">
                             <div class="card-deck">
