--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,9 @@
                                 <a class="dropdown-item" href="portfolio.html"
                                     >Total Wine Placeholder</a
                                 >
-                                <a class="dropdown-item" href="portfolio.html">Travel Log</a>
+                                <a class="dropdown-item" href="portfolio.html"
+                                    >Travel Log</a
+                                >
                             </div>
                         </li>
                         <li class="nav-item">
@@ -102,52 +104,56 @@
             <form>
                 <div class="row">
                     <div class="main-container col-md-7 offset-1">
-                        <header class="main-header">
-                            <h1>Contact me!</h1>
-                        </header>
-                        <div class="contact-form col-md-10 offset-1">
-                            <div class="form-group">
-                                <label for="exampleInputName1">Name</label>
-                                <input
-                                    type="text"
-                                    class="form-control"
-                                    id="exampleInputName1"
-                                    placeholder="Name"
-                                />
-                            </div>
+                        <div class="row">
+                            <header class="main-header col-md-12">
+                                <h1>Contact me!</h1>
+                            </header>
+                        </div>
+                        <div class="row">
+                            <div class="contact-form col-md-10 offset-1">
+                                <div class="form-group">
+                                    <label for="exampleInputName1">Name</label>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="exampleInputName1"
+                                        placeholder="Name"
+                                    />
+                                </div>
 
-                            <div class="form-group">
-                                <label for="exampleInputEmail1"
-                                    >Email address</label
-                                >
-                                <input
-                                    type="email"
-                                    class="form-control"
-                                    id="exampleInputEmail1"
-                                    aria-describedby="emailHelp"
-                                    placeholder="Enter email"
-                                />
-                                <small id="emailHelp" class="form-text"
-                                    >I'll never share your email with anyone
-                                    else.</small
-                                >
-                            </div>
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1"
+                                        >Email address</label
+                                    >
+                                    <input
+                                        type="email"
+                                        class="form-control"
+                                        id="exampleInputEmail1"
+                                        aria-describedby="emailHelp"
+                                        placeholder="Enter email"
+                                    />
+                                    <small id="emailHelp" class="form-text"
+                                        >I'll never share your email with anyone
+                                        else.</small
+                                    >
+                                </div>
 
-                            <div class="form-group">
-                                <label for="exampleFormControlTextarea1"
-                                    >Message</label
-                                >
-                                <textarea
-                                    class="form-control"
-                                    id="exampleFormControlTextarea1"
-                                    rows="5"
-                                >
-                                </textarea>
-                            </div>
+                                <div class="form-group">
+                                    <label for="exampleFormControlTextarea1"
+                                        >Message</label
+                                    >
+                                    <textarea
+                                        class="form-control"
+                                        id="exampleFormControlTextarea1"
+                                        rows="5"
+                                    >
+                                    </textarea>
+                                </div>
 
-                            <button type="submit" class="btn btn-primary">
-                                Submit
-                            </button>
+                                <button type="submit" class="btn btn-primary">
+                                    Submit
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
