--- a/index.html
+++ b/index.html
@@ -110,136 +110,115 @@
             <div class="row">
                 <article class="main-container col-md-7 offset-1">
                     <div class="row">
-                        <div class="col-md-12">
-                            <header class="main-header">
-                                <h1>About me</h1>
-                            </header>
-                        </div>
+                        <header class="main-header col-md-12">
+                            <h1>About me</h1>
+                        </header>
                     </div>
                     <div class="row">
-                        <div class="col-md-12">
-                            <section class="main-body">
-                                <img
-                                    class="img-thumbnail float-left headshot img-fluid"
-                                    src="assets/headshot.png"
-                                    alt="Mark's headshot"
-                                />
-                                <h3 class="main-title">
-                                    Full-stack developer. Brewer. Killer
-                                    haircut.
-                                </h3>
-                                <p class="main-text">
-                                    I'm Mark Cross and I'm enrolled in the
-                                    University of Richmond Coding Bootcamp. Born
-                                    and raised in Annapolis, MD, graduate of the
-                                    Univertsity of Delaware (go Blue Hens 🐓),
-                                    and now Richmond local. I've spent my career
-                                    in sales and sales leadership, having
-                                    recently served as the head of sales for
-                                    Richmond-based startup,
-                                    <a href="https://www.edconnective.com/"
-                                        >EdConenctive</a
-                                    >.
-                                </p>
-                            </section>
-                        </div>
+                        <section class="main-body col-md-12">
+                            <img
+                                class="img-thumbnail float-left headshot img-fluid"
+                                src="assets/headshot.png"
+                                alt="Mark's headshot"
+                            />
+                            <h3 class="main-title">
+                                Full-stack developer. Brewer. Killer haircut.
+                            </h3>
+                            <p class="main-text">
+                                I'm Mark Cross and I'm enrolled in the
+                                University of Richmond Coding Bootcamp. Born and
+                                raised in Annapolis, MD, graduate of the
+                                Univertsity of Delaware (go Blue Hens 🐓), and
+                                now Richmond local. I've spent my career in
+                                sales and sales leadership, having recently
+                                served as the head of sales for Richmond-based
+                                startup,
+                                <a href="https://www.edconnective.com/"
+                                    >EdConenctive</a
+                                >.
+                            </p>
+                        </section>
                     </div>
                     <!-- Social Media Links -->
                     <div class="row">
-                        <div class="column-md-12">
-                            <section class="social">
-                                <ul class="social-links">
-                                    <li>
-                                        <a
-                                            href="https://www.facebook.com/mark.cross.129"
-                                            target="_blank"
-                                        >
-                                            <img
-                                                src="assets/facebook.png"
-                                                alt="Facebook"
-                                                class="social-img"
-                                        /></a>
-                                    </li>
-                                    <li>
-                                        <a
-                                            href="https://www.instagram.com/crossbacca/"
-                                            target="_blank"
-                                        >
-                                            <img
-                                                src="assets/instagram.png"
-                                                alt="Instagram"
-                                                class="social-img"
-                                        /></a>
-                                    </li>
-                                    <li>
-                                        <a
-                                            href="https://github.com/markdcross"
-                                            target="_blank"
-                                        >
-                                            <img
-                                                src="assets/github.png"
-                                                alt="GitHub"
-                                                class="social-img"
-                                        /></a>
-                                    </li>
-                                    <li>
-                                        <a
-                                            href="https://www.linkedin.com/in/markdcross/"
-                                            target="_blank"
-                                        >
-                                            <img
-                                                src="assets/linkedin.png"
-                                                alt="LinkedIn"
-                                                class="social-img"
-                                        /></a>
-                                    </li>
-                                </ul>
-                            </section>
-                        </div>
+                        <section class="social column-md-12">
+                            <ul class="social-links">
+                                <li>
+                                    <a
+                                        href="https://www.facebook.com/mark.cross.129"
+                                        target="_blank"
+                                    >
+                                        <img
+                                            src="assets/facebook.png"
+                                            alt="Facebook"
+                                            class="social-img"
+                                    /></a>
+                                </li>
+                                <li>
+                                    <a
+                                        href="https://www.instagram.com/crossbacca/"
+                                        target="_blank"
+                                    >
+                                        <img
+                                            src="assets/instagram.png"
+                                            alt="Instagram"
+                                            class="social-img"
+                                    /></a>
+                                </li>
+                                <li>
+                                    <a
+                                        href="https://github.com/markdcross"
+                                        target="_blank"
+                                    >
+                                        <img
+                                            src="assets/github.png"
+                                            alt="GitHub"
+                                            class="social-img"
+                                    /></a>
+                                </li>
+                                <li>
+                                    <a
+                                        href="https://www.linkedin.com/in/markdcross/"
+                                        target="_blank"
+                                    >
+                                        <img
+                                            src="assets/linkedin.png"
+                                            alt="LinkedIn"
+                                            class="social-img"
+                                    /></a>
+                                </li>
+                            </ul>
+                        </section>
                     </div>
 
                     <!-- Tech Stack -->
                     <div class="row">
-                        <div class="col-md-12">
-                            <header class="stack-header">
-                                <h1>Currently Learning:</h1>
-                            </header>
-                            <div class="row">
-                                <section
-                                    class="md-col-12 stack-body stack-icons"
-                                >
-                                    <img
-                                        src="assets/html-icon.png"
-                                        alt="HTML5"
-                                    />
-                                    <img src="assets/css-icon.png" alt="CSS" />
-                                    <img
-                                        src="assets/js-icon.png"
-                                        alt="JavaScript"
-                                    />
-                                    <img
-                                        src="assets/bootstrap-icon.png"
-                                        alt="Bootstrap"
-                                    />
-                                    <img
-                                        src="assets/react-icon.png"
-                                        alt="React"
-                                    />
-                                    <img
-                                        src="assets/mongo-icon.png"
-                                        alt="MongoDB"
-                                    />
-                                    <img
-                                        src="assets/node-icon.png"
-                                        alt="Node"
-                                    />
-                                    <img
-                                        src="assets/expressjs-icon.png"
-                                        alt="Express"
-                                    />
-                                </section>
-                            </div>
-                        </div>
+                        <header class="stack-header col-md-12">
+                            <h1>Currently Learning:</h1>
+                        </header>
+                    </div>
+
+                    <div class="row">
+                        <section class="md-col-12 stack-body stack-icons">
+                            <img src="assets/html-icon.png" alt="HTML5" />
+                            <img src="assets/css-icon.png" alt="CSS" />
+                            <img src="assets/js-icon.png" alt="JavaScript" />
+                            <img
+                                src="assets/bootstrap-icon.png"
+                                alt="Bootstrap"
+                            />
+                        </section>
+                    </div>
+                    <div class="row">
+                        <section class="md-col-12 stack-body stack-icons">
+                            <img src="assets/react-icon.png" alt="React" />
+                            <img src="assets/mongo-icon.png" alt="MongoDB" />
+                            <img src="assets/node-icon.png" alt="Node" />
+                            <img
+                                src="assets/expressjs-icon.png"
+                                alt="Express"
+                            />
+                        </section>
                     </div>
                 </article>
             </div>
@@ -252,7 +231,6 @@
                     <div class="col-md-12">
                         <p>
                             Created by Mark Cross | &copy; 2020 |
-
                             <span
                                 >Background by
                                 <a
