--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,9 @@
                                 <a class="dropdown-item" href="portfolio.html"
                                     >Total Wine Placeholder</a
                                 >
-                                <a class="dropdown-item" href="portfolio.html">Travel Log</a>
+                                <a class="dropdown-item" href="portfolio.html"
+                                    >Travel Log</a
+                                >
                             </div>
                         </li>
                         <li class="nav-item">
@@ -104,9 +106,11 @@
         <main class="container-fluid">
             <div class="row">
                 <article class="main-container col-md-7 offset-1">
-                    <header class="main-header">
-                        <h1>My Portfolio</h1>
-                    </header>
+                    <div class="row">
+                        <header class="main-header col-md-12">
+                            <h1>My Portfolio</h1>
+                        </header>
+                    </div>
                     <div class="row">
                         <section class="portfolio-body col-md-12">
                             <div class="card-deck">
