Formatting updates, fixed stack icons

--- a/index.html
+++ b/index.html
@@ -115,12 +115,17 @@
                         </header>
                     </div>
                     <div class="row">
+                        <!-- Headshot -->
+
                         <section class="main-body col-md-12">
                             <img
                                 class="img-thumbnail float-left headshot img-fluid"
                                 src="assets/headshot.png"
                                 alt="Mark's headshot"
                             />
+
+                            <!-- Bio -->
+
                             <h3 class="main-title">
                                 Full-stack developer. Brewer. Killer haircut.
                             </h3>
@@ -139,7 +144,9 @@
                             </p>
                         </section>
                     </div>
+
                     <!-- Social Media Links -->
+
                     <div class="row">
                         <section class="social column-md-12">
                             <ul class="social-links">
@@ -192,6 +199,7 @@
                     </div>
 
                     <!-- Tech Stack -->
+
                     <div class="row">
                         <header class="stack-header col-md-12">
                             <h1>Currently Learning:</h1>
